# scpbrowser

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  index.html
gir/: .gitignore  Makefile.am  sources.list
po/: .gitignore  Makevars  POTFILES.in
settings/: .gitignore  Makefile.am  org.hck.scpbrowser.gschema.xml
src/: .gitignore  Makefile.am  scp_application.c  scp_application.h  scp_application.vala  scp_browser.c  scp_browser.h  scp_browser_application.vala  scp_browser_internl.h  scp_browser_jhtml.c  scp_browser_scss.c  scp_launcher_application.vala  scp_main.c  scp_message.vala  scp_notebook_page.vala  scp_notebook_tab.vala  scp_settings.vala  scp_window.vala
src/extension/: Makefile.am  scp_extension.c  scp_extension.h
src/limr/: .gitignore  Makefile.am  liblimr.c  liblimr.h  limr.vala  limr_cpatch.c  limr_data.c  limr_data.h  limr_host.vala  limr_io.c  limr_io.h  limr_parser.vala  limr_parser_patch.c  limr_parser_patch.h  limr_patch.c  limr_patch.h  limr_proc.c  limr_proc.h  limr_state.vala  limr_state_patch.c  limr_state_patch.h  limr_stream.c  limr_stream.h  limr_value.c  limr_value.h  limr_vm_data.c  limr_vm_data.h  limr_vm_procs.c  limr_vm_procs.h  limr_xpcall.c  limr_xpcall.h  private.h
src/limr/liblimr/: .gitignore  Makefile.am  limr_bridge.vala  limr_bridge_client.vala  limr_bridge_patch.c  limr_bridge_patch.h  limr_bridge_server.vala  limr_state.vala  limr_state_patch.c  limr_state_patch.h
src/limr/liblimr/vapi/: config.vapi  patch.vapi
src/limr/limr_io/: .gitignore  Makefile.am  limr_io.gresources.xml
src/limr/limr_io/lua/: io.lua
src/limr/resources/: Makefile.am  limr.gresources.xml
src/limr/resources/lua/: patch.lua
src/limr/vapi/: Makefile.am  config.deps  config.vapi  patch.deps  patch.vapi  xpcall.vapi
src/resources/: Makefile.am  resources.gresources.xml
src/resources/ui/: .gitignore  message.ui  notebook_page.ui  window.ui
src/vapi/: Makefile.am  browser.vapi  config.vapi  scp.deps  scp.vapi
src/web/: Makefile.am  web.gresources.xml
src/web/css/: .gitignore  about.scss  builtin.scss  jquery-ui.css  theme.scss
src/web/css/foundation/: _global.scss  _variables.scss
src/web/css/foundation/variables/: _colors.scss  _typography.scss
src/web/html/: about.html  copying.html  home.html
src/web/js/: builtin.js  jquery-ui.js
src/web/lua/: .gitignore  body.lua  head.lua  patch.lua  patch.lua.in  version.lua
src/web/lua/html/: accordion.lua  body.lua  callable.lua  head.lua  init.lua  navbar.lua  tag.lua  utils.lua
src/web/lua/proc/: resources.lua
